--- a/static/index.html
+++ b/static/index.html
@@ -133,6 +133,8 @@
     <!-- Roboto Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"/>
     
+    <!-- MD3 Utilities: combined frequently used class groups -->
+    <link rel="stylesheet" href="./css/md3-utilities.css"/>
     <style>
         /* Material Design 3 Custom Styles */
         :root {
