插件系统初步

--- a/static/index.html
+++ b/static/index.html
@@ -400,6 +400,7 @@
     <script src="./js/views/admin.js"></script>
     <script src="./js/views/config.js"></script>
     <script src="./js/views/logs.js"></script>
+    <script src="./js/views/plugins.js"></script>
     <script src="./js/views/index.js"></script>
     <!-- App Controller -->
     <script src="./js/app.js"></script>
