chat功能、dashboard重做、克渠道修复、日志记录

--- a/static/index.html
+++ b/static/index.html
@@ -390,6 +390,9 @@
     <!-- Snackbar Container - z-[100] to appear above side sheets (z-50) -->
     <div id="snackbar-container" class="fixed bottom-6 left-1/2 -translate-x-1/2 z-[100] flex flex-col gap-2 items-center pointer-events-none"></div>
 
+    <!-- Chart.js for Data Visualization -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    
     <!-- Scripts -->
     <script src="./js/config.js"></script>
     <script src="./js/ui.js"></script>
@@ -399,6 +402,7 @@
     <script src="./js/views/tools.js"></script>
     <script src="./js/views/admin.js"></script>
     <script src="./js/views/config.js"></script>
+    <script src="./js/views/settings.js"></script>
     <script src="./js/views/logs.js"></script>
     <script src="./js/views/plugins.js"></script>
     <script src="./js/views/index.js"></script>
